--- a/fontmaker/index.html
+++ b/fontmaker/index.html
@@ -149,7 +149,7 @@ function loadCharacters() {
   'AĂÂBCDĐEÊFGHIJKLMNOÔƠPQRSTUƯVWXYZ' + // ✅ Chữ hoa không dấu + đủ Â Ô
   'ÁÀẢÃẠẮẰẲẴẶẤẦẨẪẬÉÈẺẼẸẾỀỂỄỆÍÌỈĨỊ' +
   'ÓÒỎÕỌỐỒỔỖỘỚỜỞỠỢÚÙỦŨỤỨỪỬỮỰÝỲỶỸỴ' + // ✅ Chữ HOA có dấu
-  'abcdđêêfghijklmnopqrstuvwxyzâôơư' + // ✅ Chữ thường không dấu + thêm â ô
+  'abcdđeêêfghijklmnopqrstuvwxyzâôơư' + // ✅ Chữ thường không dấu + thêm â ô
   'áàảãạăắằẳẵặâấầẩẫậéèẻẽẹêếềểễệíìỉĩị' +
   'óòỏõọôốồổỗộơớờởỡợúùủũụưứừửữựýỳỷỹỵ' + // ✅ Chữ thường có dấu
   '0123456789.,:;!?()[]{}-+=*/'; 
